--- a/index.html
+++ b/index.html
@@ -5,5 +5,10 @@
 	<link rel="icon" href="images/game_icon.ico" type="image/icon type" />
 </head>
 <body>
-	Click <a href="main.html">here</a> to play!
+	<div align="center">
+		<br><br><br>
+		<button class="btn" onclick="playDI()">Play Distance Incremental</button>
+	</div>
+
+	<script src="./js/game.js"></script>
 </body>
