--- a/changelog.html
+++ b/changelog.html
@@ -1,185 +1,25 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="style.css" />
-	<title>Dist-Inc Changelog</title>
+	<title>Dist-Inc Distilled Changelog</title>
 	<link rel="icon" href="images/game_icon.ico" type="image/icon type" />
 </head>
-<body align="center" style="text-align: center;">
+<body align="center" style="text-align: center; background-color: rgb(163, 163, 163);">
 	<br /><br />
-	<span style="font-size: 25px;"><b>α1.0: Base Game</b></span
+	<span style="font-size: 25px;"><b>v1.0: Softcap removal (April 12th 2022)</b></span
 	><br />
 	<ul>
-		<li>Created base game (up to Rockets)</li>
-		<li>Created an achievement system</li>
-	</ul>
-	<br /><br />
-	<span style="font-size: 25px;"><b>α1.1: Rocket Fuel Update</b></span
-	><br />
-	<ul>
-		<li>Implemented Rocket Fuel</li>
-		<li>Added new Rank/Tier rewards</li>
-		<li>Added saving/loading system</li>
-		<li>Implemented Automation</li>
+		<li>Removed scalings and softcaps up to Rockets</li>
+		<li>Mobile friendly</li>
 	</ul>
 	<br /><br />
-	<span style="font-size: 25px;"><b>α1.2: Time Reversal Update</b></span
+	<span style="font-size: 25px;"><b>v1.1: The distilled holy part 1 (August 13th 2022)</b></span
 	><br />
 	<ul>
-		<li>Implemented Time Reversal</li>
-		<li>Added new Rank/Tier rewards</li>
-	</ul>
-	<br /><br />
-	<span style="font-size: 25px;"><b>α1.3: Collapse Update</b></span
-	><br />
-	<ul>
-		<li>Implemented Collapse</li>
-		<li>Added new Rank/Tier rewards</li>
-		<li>Added new softcaps</li>
-	</ul>
-	<br /><br />
-	<span style="font-size: 25px;"><b>β1.0 α1.0: Hard Mode Update</b></span
-	><br />
-	<ul>
-		<li>Implemented Modes (specifically Hard Mode)</li>
-		<li>Added softcap displays</li>
-	</ul>
-	<br /><br />
-	<span style="font-size: 25px;"><b>β1.0 α1.1: Pathogens Update</b></span
-	><br />
-	<ul>
-		<li>Implemented Pathogens</li>
-		<li>Added basic (Scaled) scalings</li>
-		<li>Added new Rank/Tier rewards</li>
-	</ul>
-	<br /><br />
-	<span style="font-size: 25px;"><b>β1.1 α1.0: Extra Modes Update</b></span
-	><br />
-	<ul>
-		<li>Implemented AAU & NA modes</li>
-		<li>Implemented Absurd Mode (never play this mode)</li>
-	</ul>
-	<br /><br />
-	<span style="font-size: 25px;"><b>β1.1 α1.1: Dark Circle Update</b></span
-	><br />
-	<ul>
-		<li>Implemented Dark Circle</li>
-		<li>Added 5 new Time Reversal Upgrades</li>
-		<li>Added Superscaled/Hyper scalings</li>
-	</ul>
-	<br /><br />
-	<span style="font-size: 25px;"><b>β1.1 α1.2: Notations Update</b></span
-	><br />
-	<ul>
-		<li>Implemented various notations</li>
-		<li>Implemented autosaving</li>
-	</ul>
-	<br /><br />
-	<span style="font-size: 25px;"><b>β1.2 α1.0: Generalization Update</b></span
-	><br />
-	<ul>
-		<li>Reorganized/generalized various game aspects</li>
-		<li>Moved game files into folders</li>
-	</ul>
-	<br /><br />
-	<span style="font-size: 25px;"><b>β1.2 α1.1: Infinity Update</b></span
-	><br />
-	<ul>
-		<li>Implemented Infinity</li>
-	</ul>
-	<br /><br />
-	<span style="font-size: 25px;"><b>v1.0: Ascension Update</b></span
-	><br />
-	<ul>
-		<li>Implemented Ascension</li>
-		<li>Added a "Force Infinity" button</li>
-		<li>Added new Infinity Upgrades</li>
-	</ul>
-	<br /><br />
-	<span style="font-size: 25px;"><b>v1.1: Stadium Update</b></span
-	><br />
-	<ul>
-		<li>Implemented Stadium</li>
-		<li>Added new Infinity Upgrades</li>
-	</ul>
-	<br /><br />
-	<span style="font-size: 25px;"><b>v1.2: Pantheon Update</b></span
-	><br />
-	<ul>
-		<li>Implemented Pantheon</li>
-		<li>Implemented Purge</li>
-		<li>Added new Infinity Upgrades</li>
-	</ul>
-	<br /><br />
-	<span style="font-size: 25px;"><b>v1.3: Derivatives Update</b></span
-	><br />
-	<ul>
-		<li>Implemented Derivatives</li>
-		<li>Added new Infinity Upgrades</li>
-	</ul>
-	<br /><br />
-	<span style="font-size: 25px;"><b>v1.4: Game Fix Update</b></span
-	><br />
-	<ul>
-		<li>Tons of bugfixes</li>
-		<li>Optimized a bunch of things</li>
-		<li>Added Extreme Mode</li>
-		<li>Fixed tons of problems in the game</li>
-		<li>Some quality of life improvements & just making the game look better</li>
-	</ul>
-	<br /><br />
-	<span style="font-size: 25px;"><b>v1.5: Elementary Update</b></span
-	><br />
-	<ul>
-		<li>Implemented Elementary</li>
-		<li>Switched to OmegaNum library</li>
-	</ul>
-		<br /><br />
-	<span style="font-size: 25px;"><b>v1.6: Theory Update</b></span
-	><br />
-	<ul>
-		<li>Implemented Theory</li>
-		<li>Added Hotkeys</li>
-		<li>Adjusted a few modes, and extended some to Elementary</li>
-	</ul>
-	<span style="font-size: 25px;"><b>v1.7: Hadronic Challenge Update</b></span
-	><br />
-	<ul>
-		<li>Implemented Hadronic Challenge & Inflatons</li>
-		<li>Added a few new fonts and other stuff</li>
-	</ul>
-	<span style="font-size: 25px;"><b>v1.71: Hiker's Dream Update</b></span
-	><br />
-	<ul>
-		<li>Implemented Hiker's Dream mode</li>
-	</ul>
-	<span style="font-size: 25px;"><b>v1.8: Quantum Foam Update</b></span
-	><br />
-	<ul>
-		<li>Implemented Quantum Foam</li>
-		<li>Squished a few bugs</li>
-	</ul>
-	<span style="font-size: 25px;"><b>v1.9: Skyrmions Update</b></span
-	><br />
-	<ul>
-		<li>Implemented Skyrmions</li>
-		<li>Made automators/options look better</li>
-		<li>Added some more statistics stuff</li>
-		<li>Squished some more bugs</li>
-	</ul>
-	<span style="font-size: 25px;"><b>v1.91: Mode Extension Update</b></span
-	><br />
-	<ul>
-		<li>Balanced Extreme & Hiker's Dream modes to v1.9 endgame</li>
-		<li>Added a few QoL options</li>
-		<li>Fixed a few bugs</li>
-		<li>Options are now cross-save compatible</li>
-	</ul>
-	<span style="font-size: 25px;"><b>v2.0: Multiverse Update</b></span
-	><br />
-	<ul>
-		<li>Implemented Multiverses</li>
-		<li>Added a few QoL options</li>
-		<li>Fixed a few bugs</li>
-		<li>Increased save limit to 96</li>
-		<li>Added post-game stuff</li>
+		<li>Removed scalings and softcaps up to early 9 endorsements</li>
+		<li>Fixed rankbot and tierbot glitch, where they somehow give an extra rank/tier while upgrading automatically</li>
+		<li>Added loading screen animation</li>
+		<li>Added Infinity text animation</li>
+		<li>Added TR upgrade table scrolling. You now don't have to scroll entire game just for upgrade accessibility</li>
+		<li>Added brain and crematorium feature</li>
 	</ul>
 </body>
